Blog details page added
Blog details page added. Footer and heder part improved.

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="blog.html">Blog</a></li>
-                            <li><a class="dropdown-item" href="blog.html">Blog Details</a></li>
+                            <li><a class="dropdown-item" href="blogdetails.html">Blog Details</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -82,20 +82,17 @@
 
 </navbar>
 
-<header>
-    <div class="p-5 text-center " style="display: flex;">
-
-        <div class=" " style=" background-repeat: no-repeat !important; align-self: center; ">
-            <div class=" d-flex justify-content-center align-items-center h-100 ">
-                <div class=" text-white heading-content ">
-                    <h5 class=" mb-3 ">Contact</h5>
-                    <p class=" mb-3 ">Home / Contact</p>
-
-                </div>
+<header id="header">
+    <div class="p-5 text-center">
+        <div class="text-white heading-content">
+            <div style="padding-top: 10%;">
+                <h5 class=" mb-3 " style="font-family: 'Livvic-bold'; font-size: 30px;">Contact</h5>
+                <p class=" mb-3 " style="text-align: center;">
+                    <a href="index.html" style="text-decoration: none; color: white;">Home</a> / Contact
+                </p>
             </div>
         </div>
     </div>
-    <!-- Background image -->
 </header>
 
 
@@ -280,132 +277,141 @@
     <script src=" /js/bootstrap.js "></script>
 </body>
 
-<footer id="footer">
+<footer id="footer" class="">
 
-    <div class="footer-top footer">
-        <div class=" row py-5 ">
-            <!-- Grid column -->
-            <div class=" col-md-12 col-lg-3 col-xl-3 col-12  footer px-5 ">
-                <!-- Content -->
-                <a class=" navbar-brand " href=" # ">
-                    <img src=" /img/logo-dark_2.png " alt=" " width=" 150 " height=" 33 ">
-                </a>
-                <p class=" pt-4 ">
-                    Sedut perspiciatis unde omnis iste natus error sitlutem acc usantium doloremque denounce with illo inventore veritatis
-                </p>
+    <div class=" ps-5" style="background-image: url(/img/footer-bg.png); background-repeat: no-repeat; background-size: cover; background-position-x: center ;">
+        <div class="">
+            <section>
+                <div class=" row py-5 " style="padding-bottom: 1%;">
+                    <!-- Grid column -->
+                    <div class=" col-md-12 col-lg-3 col-xl-3 col-12  footer px-5 ">
+                        <a class=" navbar-brand " href=" # ">
+                            <img src=" /img/logo-dark_2.png " alt=" " width=" 150 " height=" 33 ">
+                        </a>
+                        <p class=" pt-4 ">
+                            Sedut perspiciatis unde omnis iste natus error sitlutem acc usantium doloremque denounce with illo inventore veritatis
+                        </p>
 
-                <!-- Social Media -->
+                        <!-- Social Media start -->
+                        <section class=" mb-4 ">
+                            <!-- Facebook -->
+                            <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
+                                    class=" fab fa-facebook-f "></i></a>
 
-                <section class=" ">
-                    <!-- Facebook -->
-                    <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
-                            class=" fab fa-facebook-f "></i></a>
+                            <!-- Twitter -->
+                            <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
+                                    class=" fab fa-twitter "></i></a>
 
-                    <!-- Twitter -->
-                    <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
-                            class=" fab fa-twitter "></i></a>
+                            <!-- Google -->
+                            <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
+                                    class=" fab fa-google "></i></a>
 
-                    <!-- Google -->
-                    <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
-                            class=" fab fa-google "></i></a>
+                            <!-- Instagram -->
+                            <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
+                                    class=" fab fa-instagram "></i></a>
 
-                    <!-- Instagram -->
-                    <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
-                            class=" fab fa-instagram "></i></a>
+                            <!-- Linkedin -->
+                            <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
+                                    class=" fab fa-linkedin-in "></i></a>
 
-                    <!-- Linkedin -->
-                    <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
-                            class=" fab fa-linkedin-in "></i></a>
+                            <!-- Github -->
+                            <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
+                                    class=" fab fa-github "></i></a>
+                        </section>
 
-                    <!-- Github -->
-                    <a class=" btn btn-outline-light btn-floating m-1 " href=" #! " role=" button "><i
-                            class=" fab fa-github "></i></a>
-                </section>
+                        <!-- Social Media end -->
 
-                <!-- Social Media -->
-
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class=" col-md-12 col-lg-3 col-xl-3 col-12  px-5">
-                <!-- Links -->
-                <h5 class=" fw-bold text-dark mb-4 ">
-                    IT Services
-                </h5>
-                <p>
-                    <a href=" #! " class=" text-reset text-decoration-none ">Software Developement</a>
-                </p>
-                <p>
-                    <a href=" #! " class=" text-reset text-decoration-none ">Web Developement</a>
-                </p>
-                <p>
-                    <a href=" #! " class=" text-reset text-decoration-none ">Analytic Solutions</a>
-                </p>
-                <p>
-                    <a href=" #! " class=" text-reset text-decoration-none ">Cloud and DevOps</a>
-                </p>
-                <p>
-                    <a href=" #! " class=" text-reset text-decoration-none ">Project Design</a>
-                </p>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class=" col-md-12 col-lg-3 col-xl-3 col-12  px-5 ">
-                <!-- Links -->
-                <h5 class=" mb-4 text-dark fw-bold ">
-                    Contact
-                </h5>
-                <p> Uğur Mumcu, Kartal 34882 IST, TR</p>
-                <p> + 90 (123) 456 7890)</p>
-                <p> info@example.com</p>
-
-                <p> Opening Hours: 10.00 - 24.00</p>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class=" col-md-12 col-lg-3 col-xl-3 col-12  px-5">
-                <!-- Content -->
-                <h5 class="  fw-bold mb-4 text-dark ">
-                    Newsletter
-                </h5>
-                <p>
-                    We denounce with righteous and in and dislike men who are so beguiled and demo realized.
-                </p>
-
-
-                <!----------------Newsletter------------------->
-                <form>
-                    <div class=" form-group d-flex justify-content-end bg-white rounded-pill p-2 ">
-                        <input id=" form_lastname " type=" email " name=" email " class=" form-control bg-white border-0 form-control-sm m-0 rounded-pill " placeholder=" Your email adress " required=" required " data-error=" Valid E-mail
-is required. ">
-                        <div class=" help-block with-errors "></div>
-                        <button type=" submit " class=" btn btn-gradiental rounded-circle btn-lg p-0 ">......</button>
                     </div>
-                </form>
-                <!----------------Newsletter------------------->
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="mb-4 col-md-12 col-lg-3 col-xl-3 col-12  px-5">
+                        <!-- Links -->
+                        <h5 class=" fw-bold text-dark mb-4 ">
+                            IT Services
+                        </h5>
+                        <p>
+                            <a href=" #! " class=" text-reset text-decoration-none ">Software Developement</a>
+                        </p>
+                        <p>
+                            <a href=" #! " class=" text-reset text-decoration-none ">Web Developement</a>
+                        </p>
+                        <p>
+                            <a href=" #! " class=" text-reset text-decoration-none ">Analytic Solutions</a>
+                        </p>
+                        <p>
+                            <a href=" #! " class=" text-reset text-decoration-none ">Cloud and DevOps</a>
+                        </p>
+                        <p>
+                            <a href=" #! " class=" text-reset text-decoration-none ">Project Design</a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="mb-4 col-md-12 col-lg-3 col-xl-3 col-12  px-5 ">
+                        <!-- Links -->
+                        <h5 class=" mb-4 text-dark fw-bold ">
+                            Contact
+                        </h5>
+                        <p> Uğur Mumcu, Kartal 34882 IST, TR</p>
+                        <p> + 90 (123) 456 7890)</p>
+                        <p> info@example.com</p>
+
+                        <p> Opening Hours: 10.00 - 24.00</p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="mb-4 col-md-12 col-lg-3 col-xl-3 col-12  px-5">
+                        <!-- Content -->
+                        <h5 class="  fw-bold mb-4 text-dark ">
+                            Newsletter
+                        </h5>
+                        <p>
+                            We denounce with righteous and in and dislike men who are so beguiled and demo realized.
+                        </p>
 
 
+                        <!----------------Newsletter------------------->
+                        <form>
+                            <div class="mb-4 form-group d-flex justify-content-end bg-white rounded-pill p-1 ">
+                                <input id=" form_lastname " type=" email " name=" email " class=" form-control bg-white border-0 form-control-sm m-0 rounded-pill " placeholder=" Your email adress " required=" required " data-error=" Valid E-mail
+is required. ">
+                                <div class=" help-block with-errors "></div>
+                                <button type=" submit " class=" btn btn-gradiental rounded-circle px-3 ">...</button>
+                            </div>
+                        </form>
+                        <!----------------Newsletter------------------->
+
+
+                    </div>
+                    <!-- Grid column -->
+
+                </div>
+            </section>
+
+            <div class="row bg-grey py-3" style="background-size: cover;">
+
+                <div class="col-6">
+                    © 2021 Copyright:
+                    <a class="text-end text-reset fw-bold text-decoration-none" href="https://merwusch.github.io/Portfolio/">Merwusch</a>
+                </div>
+
+                <div class="col-6">
+                    <a href="#" class="pe-3 text-decoration-none" style="color: black;">Home</a>
+                    <a href="#" class="pe-3 text-decoration-none" style="color: black;">About</a>
+                    <a href="#" class="pe-3 text-decoration-none" style="color: black;">Blog</a>
+                    <a href="#" class="pe-3 text-decoration-none" style="color: black;">Shop</a>
+                    <a href="#" class="text-decoration-none" style="color: black;">FAQs</a>
+                </div>
             </div>
-            <!-- Grid column -->
+
         </div>
-        <!-- Grid row -->
+
+
 
     </div>
-
-    <div class="footer-bottom">
-
-        <!-- Copyright -->
-        <div class=" text-center p-4 " style=" background-color: rgba(0, 0, 0, 0.05); ">
-            © 2021 Copyright:
-            <a class=" text-reset fw-bold text-decoration-none " href=" !# ">Mervenur Yılmaz</a>
-        </div>
-        <!-- Copyright -->
-
-    </div>
-
 
 </footer>
 
