--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>HOME</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <navbar>
@@ -195,7 +196,7 @@
                             Newsletter
                         </h5>
                         <p>
-                            We denounce with righteous and in and dislike men who are so beguiled and demo realized.
+                            We denounce with righteous and in and dislike men who are so beguiled and demo realized.WV
                         </p>
 
 
