--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
     <title>BLOG</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/blog.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <navbar>
